
    Removed the following config settings from various configs for doing nothing
    Update_Check, Prefer_Beta, Ability_Activation_Level_Gate, Max_Tries_At_Same_Location, Prevent_AFK_Leveling, Items_Pickup_Disabled_Full_Inventory

    Removed the following config settings for being unwanted
    Config_Update_Overwrite, Tool_Mods_Enabled, Armor_Mods_Enabled, Block_Mods_Enabled, Entity_Mods_Enabled,

    API Changes
    Config settings can now be found in the ConfigManager (getter for it in mcMMO.java)
    Collection values from the config get converted into a runtime appropriate dataset, those can be found in DynamicSettingsManager (getter for it in mcMMO.java)
    mcMMO metadata keys have been moved into a convenience class (MetadataConstants)
    mcMMO now uses floats instead of doubles when appropriate (mostly XP value calculations)
    mcMMO now tracks and exposes a players specific XP boosts in each skill, which are normally only altered through XP perks
    Added 'getPlayersPersonalXPRate' to Experience API - Grabs the players current XP rate, defaults to 1.0 but is overwritten by any xp perks permissions
    Added API method to check if player parties are size capped
    Added API method to grab the level cap of a skill by its PrimarySkillType ENUM definition
    Added API method to check if a skill was being level capped

Version 2.1.58
    Fixed the wrong locale string being used for Mining Double Drops

Version 2.1.57
    Fixed an incredibly rare dupe bug that only happened with VERY specific config options that was extremely difficult to pull off

Version 2.1.56
    Very large update to the zh_CN Chinese language file (thanks Dream_m)

Version 2.1.55
    Fixed a bug that could occur when adding UUIDs to old outdated DBs

Version 2.1.54
    Fixed a bug where the Skill 'Understanding the Art' was preventing vanilla experience orbs from furnaces
    Fixed 'Understanding the Art' not correctly boosting vanilla XP from furnaces

Version 2.1.53