@@ -2,6 +2,7 @@ package com.gmail.nossr50.datatypes.experience;
 
 import com.gmail.nossr50.config.experience.ExperienceConfig;
 import com.gmail.nossr50.datatypes.skills.PrimarySkillType;
+import com.gmail.nossr50.mcMMO;
 
 import java.util.concurrent.Delayed;
 import java.util.concurrent.TimeUnit;
@@ -18,7 +19,7 @@ public class SkillXpGain implements Delayed {
     }
 
     private static long getDuration() {
-        return TimeUnit.MINUTES.toMillis(ExperienceConfig.getInstance().getDiminishedReturnsTimeInterval());
+        return TimeUnit.MINUTES.toMillis(mcMMO.getConfigManager().getConfigLeveling().getDimishedReturnTimeInterval());
     }
 
     public PrimarySkillType getSkill() {
